# text-to-image-slack-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile2  README.md  deploy.sh  foo.py  pyproject.toml  requirements.txt  test-request.sh
.devcontainer/: Dockerfile  custom.zsh-theme  devcontainer.json  post-create.sh
.github/workflows/: lint.yaml  push.yaml  test.yaml
notebooks/: custom-pipeline.ipynb
scripts/: download-model-files.py  test-generate.py  test-request.py
src/: app.py  constants.py  contrib.py  generate.py  inference.py  model.py  pipeline.py  query.py  query_test.py  utils.py  worker.py
